kubernetes/blue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app-dep-blue
  namespace: lablabs
  labels:
    name: go-app
spec:
  replicas: 2
  selector:
    matchLabels:
      name: go-app
  template:
    metadata:
      labels:
        name: go-app
        version: blue
    spec:
      containers:
      # - name: go-be
      #   image: tomasbalaz/sample-backend:0.1
      #   ports:
      #   - containerPort: 8080
      #   livenessProbe:
      #     httpGet:
      #       path: /app/test
      #       port: 8080
      #       httpHeaders:
      #     initialDelaySeconds: 3
      #     periodSeconds: 3
      #   resources:
      #     limits:
      #       cpu: "0.15"
      #       memory: "100Mi"
      #     requests:
      #       cpu: "0.05"
      #       memory: "50Mi"
      - name: nginx-proxy
        image: tomasbalaz/sample-nginx:0.1
        ports:
        - containerPort: 80
        # livenessProbe:
        #   httpGet:
        #     path: /app/test
        #     port: 80
        #     httpHeaders:
        #   initialDelaySeconds: 3
        #   periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 3
        resources:
          limits:
            cpu: "0.15"
            memory: "100Mi"
          requests:
            cpu: "0.05"
            memory: "50Mi"
